Fix: member_item height was causing overlaps in the members

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -28082,8 +28082,7 @@ cite {
 .member-item {
   float: left;
   padding: 0 5px;
-  width: 100%;
-  height: 187px; }
+  width: 100%; }
 
 .grid-sizer,
 .member-item {
@@ -29795,8 +29794,7 @@ cite {
 .member-item {
   float: left;
   padding: 0 5px;
-  width: 100%;
-  height: 187px; }
+  width: 100%; }
 
 .grid-sizer,
 .member-item {
