--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -1177,7 +1177,6 @@ cite {
     float: left;
     padding: 0 5px;
     width: 100%;
-    height: 187px;
 }
 
 .grid-sizer,
